# basil

./: .gitignore  .gitmodules  .typos.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  REUSE.toml  SECURITY.md  dist-workspace.toml  flake.nix  justfile  rust-toolchain.toml
.beads/: .gitignore  config.yaml  issues.jsonl
.cargo/: config.toml
crates/basil-bin/: Cargo.toml  README.md
crates/basil-bin/src/: client_cli.rs  lib.rs  main.rs
crates/basil-bin/tests/: configuration_source_events.rs
crates/basil-client/: Cargo.toml  README.md
crates/basil-client/examples/: stream_cli.rs
crates/basil-client/src/: client.rs  client_sync.rs  constants.rs  error.rs  lib.rs  proto.rs  sealed_invocation.rs
crates/basil-client/src/stream/: format.rs  kem.rs  mod.rs  tests.rs
crates/basil-core/: Cargo.toml  README.md  build.rs
crates/basil-core/proto/basil/attestor/v1/: attestor.proto
crates/basil-core/src/: agent_cli.rs  bundle_cli.rs  demo.rs  doctor.rs  init.rs  lib.rs  unlock.rs
crates/basil-core/src/attestor_protocol/: codec.rs  limits.rs  mod.rs  session.rs
crates/basil-core/src/core/: actor.rs  attestor_realm.rs  audit.rs  capability.rs  configuration.rs  crypto_provider.rs  decision.rs  ed25519_sign.rs  event.rs  identity.rs  manager.rs  minter.rs  ml_dsa_sign.rs  ml_kem_envelope.rs  mod.rs  oci_verification.rs  peer.rs  process_evidence.rs  reconcile.rs  release_admission.rs  reload.rs  revocation.rs  state.rs  x25519_seal.rs
crates/basil-core/src/core/backend/: aws_kms.rs  gcp_kms.rs  keystore.rs  kms_common.rs  mod.rs  pki.rs  spiffe.rs  svid.rs  transit.rs  vault.rs
crates/basil-core/src/core/catalog/: evidence.rs  glob.rs  loader.rs  mod.rs  pdp.rs  policy.rs  schema.rs
crates/basil-core/src/core/seal/: aead.rs  cred.rs  deposit.rs  format.rs  mod.rs  tests.rs
crates/basil-core/src/core/seal/unlock/: age_yubikey.rs  bip39.rs  kdf.rs  mod.rs  passphrase.rs  tpm.rs
crates/basil-core/src/service/: admin.rs  aead.rs  broker.rs  invocation.rs  jwks.rs  minting.rs  mod.rs  sds.rs  secret.rs  shared.rs  signing.rs  spiffe.rs
crates/basil-core/src/transport/: grpc_server.rs  mod.rs
crates/basil-core/testdata/: jwks_tls_cert.pem  jwks_tls_key.pem
crates/basil-core/tests/: schema3_examples.rs
crates/basil-cose/: Cargo.toml  README.md
crates/basil-cose/src/: alg.rs  claims.rs  encrypt.rs  error.rs  hash.rs  kdf.rs  keys.rs  label.rs  lib.rs  seal.rs  sign.rs  tests.rs  traits.rs  types.rs
crates/basil-cose/src/codec/: mod.rs  precheck.rs
crates/basil-keystore-backend/: Cargo.toml  README.md
crates/basil-keystore-backend/src/: lib.rs  onepassword.rs  store.rs
crates/basil-nats/: Cargo.toml  README.md
crates/basil-nats-bridge/: Cargo.toml  README.md
crates/basil-nats-bridge/src/: lib.rs  main.rs
crates/basil-nats/src/: lib.rs
crates/basil-proto/: Cargo.toml  README.md  build.rs
crates/basil-proto/fixtures/: cose-es256-sign1-v1.json  cose-sealed-invocation-v1.json
crates/basil-proto/proto/basil/broker/v1/: broker.proto
crates/basil-proto/proto/envoy/config/core/v3/: address.proto  backoff.proto  base.proto  extension.proto  health_check.proto
crates/basil-proto/proto/envoy/config/endpoint/v3/: endpoint.proto
crates/basil-proto/proto/envoy/config/route/v3/: route_components.proto
crates/basil-proto/proto/envoy/extensions/transport_sockets/tls/v3/: common.proto  secret.proto
crates/basil-proto/proto/envoy/service/discovery/v3/: discovery.proto
crates/basil-proto/proto/envoy/service/secret/v3/: sds.proto
crates/basil-proto/proto/google/rpc/: status.proto
crates/basil-proto/proto/spiffe/: UPSTREAM.md  workloadapi.proto
crates/basil-proto/proto/xds/core/v3/: resource.proto
crates/basil-proto/src/: invocation.rs  lib.rs  types.rs
crates/basil-proto/tests/: cose_es256_fixtures.rs  cose_fixtures.rs
crates/basil-tests/: Cargo.toml  README.md
crates/basil-tests/fixtures/release-manifest/v1/cosign-3.1.1-conformance/: README.md  index.json  verify.sh
crates/basil-tests/src/: lib.rs
crates/basil-tests/tests/: bip39_unlock_e2e.rs  cose_es256_interop.rs  cose_interop.rs  doctor_e2e.rs  ecdsa_p384_p521_e2e.rs  envoy_sds_e2e.rs  go_spiffe_interop.rs  health_ready_e2e.rs  init_flow_e2e.rs  jwks_oidc_e2e.rs  jwt_svid_revocation_e2e.rs  kv2_sign_e2e.rs  nats_bridge_cose_e2e.rs  openbao_vault_jwt_auth_interop.rs  pki_leaf_san_e2e.rs  pqc_e2e.rs  reload_e2e.rs  spiffe_interop.rs  spiffe_jwt_login_e2e.rs  spiffe_rustls_interop.rs  spiffe_wire_compat.rs  spiffe_x509_svid_e2e.rs
crates/basil-tests/tests/cose_go_interop/: cose_interop_test.go  es256_interop_test.go  go.mod  go.sum
crates/basil-tests/tests/cose_go_interop/cmd/es256produce/: main.go
crates/basil-tests/tests/cose_go_interop/cmd/produce/: main.go
crates/basil-tests/tests/oidc_verifier_go/: go.mod  go.sum  main.go
designs/: audit-logging.md  basil-cose-api.md  binary-unification.html  broker-grpc-api.html  bundle-credential-deposit.md  catalog-policy-schema.html  cose-sealed-invocation.html  example-suite-2026-07.md  kms-transit-backends.md  pqc-provider-agility.html  spiffe-workload-api.html  subject-based-authentication-CHANGES.md  subject-based-authentication.html  unlock-and-bundle.html
examples/artifact-signing/: Cargo.toml  README.md  run.sh
examples/artifact-signing/src/: main.rs
examples/cose-nats-demo/: Cargo.toml  README.md  run.sh
examples/cose-nats-demo/src/: main.rs
examples/cose-nats-telemetry/: Cargo.toml  README.md  run.sh
examples/cose-nats-telemetry/src/: main.rs
examples/stream-file-encryption/: Cargo.toml  README.md  run.sh
examples/stream-file-encryption/src/: main.rs
examples/web-service-axum/: Cargo.toml  README.md  catalog.template.json  policy.template.json  run.sh
examples/web-service-axum/src/: main.rs
interop-tests/: README.md
nix/: backend-capabilities.nix  basil-agent.nix  basil-options.nix
scripts/: compose-phase1-artifacts.fedora-44-runtime-packages-x86_64.packages.tsv  compose-phase1-artifacts.lock.tsv  compose-phase1-artifacts.sh  gcp-kms-smoke.sh  (+7 more)
xtask/: Cargo.toml
xtask/src/: main.rs
(+52 files in other folders)
