# SPDX-FileCopyrightText: 2026 OpenBasil Contributors
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "xtask"
description = "Basil workspace automation tasks (man-page generation)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
basil-bin = { workspace = true }
basil-nats-bridge = { workspace = true }

anyhow = { workspace = true }
# `string` (over the workspace derive/env set) lets us retitle a `clap::Command`
# with an owned `String` so nested pages carry their full `basil-<sub>` name.
clap = { version = "4", features = ["derive", "string"] }
clap_mangen = "0.3"

[lints]
workspace = true
