# SPDX-FileCopyrightText: 2026 OpenBasil Contributors
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "basil-bin"
description = "Unified Basil operator and client binary."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.openbasil.org"
keywords = ["basil", "vault", "secrets", "cryptography", "cli"]
categories = ["cryptography", "command-line-utilities"]
rust-version = "1.88"
publish = true

[package.metadata.dist]
# Name the Homebrew formula `basil` (not the crate name `basil-bin`) so the
# install is `brew install openbasil/tap/basil`.
formula = "basil"

[[bin]]
name = "basil"
path = "src/main.rs"

[features]
default = [
  "db-keystore",
  "onepassword",
  "unlock-age-yubikey",
  "unlock-bip39",
]
http = ["basil-core/http"]
http-tls = ["http", "basil-core/http-tls"]
keystore-backend = ["basil-core/keystore-backend"]
db-keystore = ["keystore-backend", "basil-core/db-keystore"]
onepassword = ["keystore-backend", "basil-core/onepassword"]
# aws-kms and gcp-kms add about ~10MB to the bin size due to large SDKs
aws-kms = ["basil-core/aws-kms"]
gcp-kms = ["basil-core/gcp-kms"]
# yubikey support still experimental
unlock-age-yubikey = ["basil-core/unlock-age-yubikey"]
unlock-bip39 = ["basil-core/unlock-bip39"]
# tpm is still experimental
unlock-tpm = ["basil-core/unlock-tpm"]
# tpm2 is still experimental
tpm2 = ["basil-core/tpm2"]
otlp = ["basil-core/otlp"]
secure-alloc = ["mimalloc/secure"]

[dependencies]
basil = { workspace = true }
basil-core = { workspace = true }
basil-nats = { workspace = true }

anyhow = { workspace = true }
base64 = { workspace = true, features = ["std"] }
clap = { workspace = true }
hex = { workspace = true }
mimalloc = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
zeroize = { workspace = true }

[lints]
workspace = true
