[package]
name = "basil-client"
description = "Client library for the basil agent."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version = "1.85"
publish = true

[dependencies]
tokio = { workspace = true }
basil-proto = { workspace = true }
basil-cose = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Pure-Rust crypto for the client-side streaming encryption container. These are
# the same RustCrypto family already used by basil-core; none of them pull in
# OpenBao, a tonic server, age, or argon2, so the published `basil` client crate
# stays free of broker/server dependencies.
aes-gcm = { workspace = true }
chacha20poly1305 = { workspace = true }
ml-kem = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
tokio-stream = { workspace = true }

[lints]
workspace = true
