# SPDX-FileCopyrightText: 2026 OpenBasil Contributors
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "basil-nats-bridge"
description = "NATS request/reply courier for Basil sealed invocation envelopes."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.openbasil.org/clients/nats-bridge/"
keywords = ["basil", "nats", "grpc", "bridge", "messaging"]
categories = ["network-programming", "command-line-utilities"]
rust-version = "1.88"
publish = true
autobins = false

[package.metadata.dist]
# Keep the bridge in GitHub release archives and shell installers, but do not
# emit a second Homebrew formula from the same workspace release.
installers = ["shell"]

[[bin]]
name = "basil-nats-bridge"
path = "src/main.rs"

[features]
default = []
secure-alloc = ["mimalloc/secure"]

[dependencies]
basil-proto = { workspace = true }

anyhow = { workspace = true }
async-nats = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
hyper-util = { workspace = true }
mimalloc = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
