# SPDX-FileCopyrightText: 2026 OpenBasil Contributors
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "basil-nats"
description = "Generic, dependency-light builder for NATS account/user JWTs (ed25519-nkey) where signing is delegated to an external signer (e.g. a key held in a vault/HSM)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version = "1.85"
publish = true

# This crate's own source is `#![no_std]` + `extern crate alloc` (see the `std`
# / `alloc` features below). Its workspace-inherited dependencies are kept on
# their `alloc` feature sets so the `alloc`-only build stays bare-metal no_std.
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
data-encoding = { workspace = true }
ed25519-dalek = { workspace = true }
crypto_secretbox = { workspace = true }
salsa20 = { workspace = true }
x25519-dalek = { workspace = true }
# `Rng` trait only (no ambient RNG): `seal_nats_curve` takes the rng from the
# caller, so this crate pulls in no `getrandom`/`thread_rng` of its own.
rand_core = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
# Used only by tests to cross-check our wire format against a real NKey impl.
nkeys = { workspace = true }

[features]
default = ["std"]
# `std` is the default so downstream consumers are unchanged. The crate compiles
# with only `alloc` (`--no-default-features --features alloc`), which is the
# `no_std` build; `alloc` is mandatory (the crate always uses `extern crate
# alloc`), so the feature is an explicit, minimal `no_std` target marker.
std = [
  "alloc",
  "base64/std",
  "crypto_secretbox/std",
  "data-encoding/std",
  "serde/std",
  "serde_json/std",
]
alloc = []

[lints]
workspace = true
